--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,8 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
-    "vite": "^4.0.0"
+    "tailwindcss": "^3.2.4",
+    "vite": "^4.0.0",
+    "@tailwindcss/forms": "^0.5.2"
   }
 }
