--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,15 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
-  "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
-    "tailwindcss": "^3.2.4",
-    "vite": "^4.0.0",
-    "@tailwindcss/forms": "^0.5.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
+    "vite": "^4.0.0"
+  },
+  "devDependencies": {
+    "postcss": "^8.3.6",
+    "tailwindcss": "^3.2.4"
   }
 }
