--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,16 +11,16 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "flowbite": "^1.6.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
-    "@tailwindcss/jit": "^0.1.18",
     "@vitejs/plugin-react-refresh": "^1.3.1",
-    "autoprefixer": "^10.3.4",
-    "postcss": "^8.3.6",
-    "tailwindcss": "^2.2.14",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4",
     "vite": "^2.5.4"
   }
 }
