--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,8 +11,10 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^1.2.2",
     "flowbite": "^1.6.0",
     "react": "^17.0.0",
+    "react-axios": "^2.0.6",
     "react-dom": "^17.0.0",
     "react-router-dom": "^6.3.0"
   },
@@ -21,6 +23,28 @@
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4",
-    "vite": "^2.5.4"
-  }
+    "vite": "^2.5.4",
+    "eslint": "^8.23.0",
+    "eslint-plugin-vue": "^8.7.1"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "es2021": true
+    },
+    "extends": [
+      "plugin:vue/vue3-essential",
+      "eslint:recommended"
+    ],
+    "rules": {
+      "no-console": "off"
+    }
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
+
+
 }
