--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "swapper",
-  "version": "0.0.0",
+  "name": "frontend",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -26,6 +26,6 @@
     "eslint-plugin-react": "^7.31.11",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4",
-    "vite": "^2.5.4"
+    "vite": "^3.0.9"
   }
 }
