--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,11 +13,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.2.2",
+    "email-validator": "^2.0.4",
+    "formik": "^2.2.9",
     "luxon": "^3.0.3",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^6.3.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
