--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -18,6 +18,7 @@
     "luxon": "^3.0.3",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-hook-form": "^7.42.0",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.3.0",
     "uuid": "^9.0.0",
