--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.2.2",
     "email-validator": "^2.0.4",
+    "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
     "luxon": "^3.0.3",
     "react": "^17.0.0",
