--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,7 +13,9 @@
     "express": "^4.18.2",
     "mongoose": "^6.2.1",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.15",
-    "uuid": "^8.3.2"
+    "nodemon": "^2.0.15"
+  },
+  "devDependencies": {
+    "uuid": "^9.0.0"
   }
 }
