--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "email-validator": "^2.0.4",
     "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
+    "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
     "luxon": "^3.0.3",
     "react": "^17.0.0",
