--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,7 +16,8 @@
     "email-validator": "^2.0.4",
     "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
-    "jsonwebtoken": "^9.0.0",
+    "inherits": "^2.0.4",
+    "js-jwt": "^0.2.7",
     "jwt-decode": "^3.1.2",
     "luxon": "^3.0.3",
     "react": "^17.0.0",
