--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,8 +12,11 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@tanstack/react-query": "^4.22.4",
     "axios": "^1.2.2",
+    "dotenv": "^16.0.3",
     "email-validator": "^2.0.4",
+    "env": "^0.0.2",
     "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
     "inherits": "^2.0.4",
