--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -26,6 +26,7 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-hook-form": "^7.42.0",
+    "react-native-awesome-alerts": "^2.0.0",
     "react-query": "^3.39.2",
     "react-router-dom": "^6.6.2",
     "uuid": "^9.0.0",
